--- a/Tukkeendoo/.gitignore
+++ b/Tukkeendoo/.gitignore
@@ -2,6 +2,12 @@
 .gradle
 /local.properties
 /.idea/workspace.xml
+/.idea/compiler.xml
+/.idea/encoding.xml
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/runConfigurations.xml
 /.idea/libraries
 .DS_Store
 /build
