--- a/Tukkeendoo/tukkeendoo/src/main/AndroidManifest.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/AndroidManifest.xml
@@ -10,14 +10,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.splash.SplashActivity">
+        <activity android:name=".view.splash.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.login.LoginActivity" />
+        <activity android:name=".view.login.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity android:name=".view.register.RegisterActivity" />
         <activity android:name=".view.test.TestActivity" />
         <activity android:name=".view.home.HomeActivity"></activity>
