--- a/Tukkeendoo/tukkeendoo/src/main/AndroidManifest.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/AndroidManifest.xml
@@ -4,29 +4,35 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".application.Tukkeendoo"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".application.Tukkeendoo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".views.splash.SplashActivity" android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".views.splash.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".views.login.LoginActivity" android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity android:name=".views.register.RegisterActivity" android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".views.login.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".views.register.RegisterActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".views.test.TestActivity" />
-        <activity android:name=".views.main.MainActivity" android:theme="@style/AppTheme.NoActionBar"/>
-
+        <activity
+            android:name=".views.main.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".views.setting.SettingActivity"></activity>
     </application>
 
 </manifest>
