--- a/Tukkeendoo/tukkeendoo/build.gradle
+++ b/Tukkeendoo/tukkeendoo/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.tukkeendoo.tukkeendoo"
-        minSdkVersion 14
+        applicationId "com.tukkeendoo.app"
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -22,5 +22,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:+'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.android.support:support-v4:+'
+    compile 'com.google.android.gms:play-services-location:+'
+    compile 'com.google.android.gms:play-services-gcm:+'
+    compile 'com.google.android.gms:play-services-places:+'
+    compile 'com.google.android.gms:play-services-maps:+'
 }
