--- a/Tukkeendoo/tukkeendoo/src/main/AndroidManifest.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/AndroidManifest.xml
@@ -2,21 +2,41 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tukkeendoo.app">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+
 
     <application
+        android:name=".application.Tukkeendoo"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.SplashActivity">
+        <activity
+            android:name=".views.splash.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".views.login.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".views.register.RegisterActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".views.test.TestActivity" />
+        <activity
+            android:name=".views.main.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".views.setting.SettingActivity"></activity>
     </application>
 
 </manifest>
